[gd_scene load_steps=2 format=3 uid="uid://nfndsk6mffcr"]

[ext_resource type="Script" path="res://Scene/ui.gd" id="1_sl2ms"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_sl2ms")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="ActiveButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Activate Worm"

[node name="BazookaButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Bazooka"

[node name="GranadeButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Granade"

[node name="SniperButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Sniper"

[connection signal="pressed" from="HBoxContainer/ActiveButton" to="." method="_on_active_button_pressed"]
[connection signal="pressed" from="HBoxContainer/BazookaButton" to="." method="_on_bazooka_button_pressed"]
[connection signal="pressed" from="HBoxContainer/GranadeButton" to="." method="_on_granade_button_pressed"]
[connection signal="pressed" from="HBoxContainer/SniperButton" to="." method="_on_sniper_button_pressed"]
